# Software-Engineering-Sprint3

./: CMakeLists.txt  README.md
docs/html/: annotated.html  classMainWindow-members.html  classMainWindow.html  classMainWindow__coll__graph.dot  classMainWindow__coll__graph.md5  classMainWindow__inherit__graph.dot  classMainWindow__inherit__graph.md5  classPencil-members.html  classPencil.html  classPencil__coll__graph.dot  classPencil__coll__graph.md5  classPencil__inherit__graph.dot  classPencil__inherit__graph.md5  classProduction-members.html  classProduction.html  classProduction__coll__graph.dot  classProduction__coll__graph.md5  classProduction__inherit__graph.dot  classProduction__inherit__graph.md5  classWallet-members.html  classWallet.html  classWallet__inherit__graph.dot  classWallet__inherit__graph.md5  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  inherit_graph_0.dot  inherit_graph_0.md5  inherits.html  mainwindow_8h_source.html  namespaceUi.html  namespaces.html  pencil_8h.html  pencil_8h__dep__incl.dot  pencil_8h__dep__incl.md5  pencil_8h__incl.dot  (+7 more)
docs/latex/: annotated.tex  classMainWindow.tex  classMainWindow__coll__graph.dot  classMainWindow__coll__graph.md5  classMainWindow__inherit__graph.dot  classMainWindow__inherit__graph.md5  classPencil.tex  classPencil__coll__graph.dot  classProduction.tex  (+21 more)
src/: intelligence.cpp  intelligence.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pencil.cpp  pencil.h  production.cpp  production.h  tests.cpp  wallet.cpp  wallet.h
(+11 files in other folders)
